# quizgenius

./: .env  .env.example  .replit  Procfile  README.md  app.py  config.py  deploy_guide.md  deployment_checklist.md  file_processor.py  gemini_service.py  local_setup.py  main.py  pyproject.toml  render.yaml  render_requirements.txt  replit.md  requirements.txt  run_local.py  test_content.txt  test_deployment.py
static/: script.js  style.css
templates/: index.html
uploads/: .gitkeep
